[project]
name = "stream-lit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ShabanIkram", email = "shabanikram83@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.42.2",
]

[project.scripts]
stream-lit = "stream_lit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
